Fix de Semantica HTML, fix de margin collapsing, fix de centrado, mejora en estilos mas preciso al diseno

--- a/styles/_globales.scss
+++ b/styles/_globales.scss
@@ -40,4 +40,10 @@ p {
     color: $color-neutral-2;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+}
+
 
